2022-03-02  Antoine Quint  <graouts@webkit.org>

        [web-animations] changes to font-size should recompute keyframes
        https://bugs.webkit.org/show_bug.cgi?id=237357

        Reviewed by Antti Koivisto.

        * web-platform-tests/css/css-animations/responsive/column-width-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-context-expected.txt:
        * web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-context-filling-expected.txt:
        * web-platform-tests/web-animations/responsive/fontSize-expected.txt:
        * web-platform-tests/web-animations/responsive/perspective-expected.txt:
        * web-platform-tests/web-animations/responsive/textIndent-expected.txt:
        * web-platform-tests/web-animations/responsive/to-style-change-expected.txt:

2022-03-01  Martin Robinson  <mrobinson@webkit.org>

        When interpolating between transform lists partial prefix matches should not use matrix interpolation
        https://bugs.webkit.org/show_bug.cgi?id=235757
        <rdar://problem/88477922>

        Reviewed by Dean Jackson.

        * web-platform-tests/css/css-transforms/animation/list-interpolation-expected.txt: Mark subtests as passing.
        * web-platform-tests/css/css-transforms/animation/transform-composition-expected.txt: Ditto.
        * web-platform-tests/css/css-transforms/animation/transform-interpolation-004-expected.txt: Ditto.

2022-03-01  Antoine Quint  <graouts@webkit.org>

        [web-animations] ::placeholder should not be a valid pseudo-element for a KeyframeEffect target
        https://bugs.webkit.org/show_bug.cgi?id=237334

        Reviewed by Dean Jackson.

        * web-platform-tests/web-animations/interfaces/Animatable/animate-expected.txt:
        * web-platform-tests/web-animations/interfaces/KeyframeEffect/target-expected.txt:

2022-03-01  Antoine Quint  <graouts@webkit.org>
