@@ -1,3 +1,15 @@
+2022-03-02  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] setting the composite property on a keyframe effect should invalidate the target style
+        https://bugs.webkit.org/show_bug.cgi?id=237356
+
+        Reviewed by Dean Jackson.
+
+        * animation/KeyframeEffect.cpp:
+        (WebCore::KeyframeEffect::setComposite):
+        * animation/KeyframeEffect.h:
+        (WebCore::KeyframeEffect::setComposite): Deleted.
+
 2022-03-02  Tyler Wilcock  <tyler_w@apple.com>
 
         AX: Handle null FileList in RenderFileUploadControl::fileTextValue()
